# Lingularity-Backend

./: .coveragerc  .gitattributes  .gitignore  MANIFEST.in  Makefile  PROGRESS.md  README.md  TODO.md  environment.yml  model_downloading.py  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml
backend/: __init__.py  data_paths.py  logging.py  paths.py  string_resources.py
backend/components/: __init__.py  corpus.py  forename_conversion.py  forename_convertor.py  sentence_data.py  text_to_speech.py  vocable_entry.py
backend/components/mappings/: base.py
backend/components/text_to_speech/: __init__.py
backend/components/tts/: __init__.py  (+1 more)
backend/data/: google-tts-accents.json
backend/data_mining/: __init__.py  environment.yml
backend/database/: __init__.py
backend/metadata/: __init__.py  mine.py  paths.py  string_resources.py  types.py
backend/ops/: stemming.py
backend/src/: logging.py  paths.py  string_resources.py
backend/trainers/: __init__.py  base.py
backend/types/: bilingual_corpus.py  corpus.py  vocable_entry.py
backend/utils/: __init__.py  date.py  dictionary.py  generators.py  io.py  iterables.py  module_abstraction.py  module_interfacing.py  spacy.py  state_sharing.py  strings.py
data/: google-tts-accents.json  string-resources.ini
data/corpora/: Albanian.txt  Algerian Arabic.txt  Assamese.txt  Basque.txt  Berber.txt  Cebuano.txt  Czech.txt  French.txt  Hebrew.txt  Hindi.txt  Icelandic.txt  Indonesian.txt  Italian.txt  Kannada.txt  Khasi.txt  Latvian.txt  Odia.txt  Persian.txt  Polish.txt  Serbian.txt  Slovak.txt  Spanish.txt  Tamil.txt  Tatar.txt  Thai.txt  Turkmen.txt  Urdu.txt
data/meta-data/: language.json
data/sentence-data/: Breton.txt  Japanese.txt  Kabyle.txt  Kapampangan.txt  Macedonian.txt  Malay.txt  North Moluccan Malay.txt  Waray.txt
resources/: strings.ini
tests/: config.py  conftest.py  test_database.py  utils.py
tests/backend/: test_database.py  test_general_client.py
tests/components/: test_forename_conversion.py  test_sentence_data.py  test_tts.py
tests/metadata_mining/: test_language_metadata.py  test_scraping.py
tests/ops/: test_google_tts.py
tests/trainers/: test_sentence_translation_trainer.py
tests/vocable_trainer/: test_response_evaluation.py  test_vocable_trainer_backend.py
(+438 files in other folders)
