[tool.poetry]
name = "backend"
version = "0.1.6"
description = "Lingularity Backend"
authors = ["Janek Zangenberg <zangenbergjanek@googlemail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "3.9.12"
numpy = "*"
unidecode = "*"
nltk = "*"
pymongo = "*"
tqdm = "*"
dnspython = "*"
playsound = "*"
cryptography = "3.1"
gTTS = "*"
spacy = "*"
monostate = "*"
textacy = "*"  # mining
more_itertools = "*"

[tool.poetry.scripts]
install-spacy-models = "backend.ops.spacy_models.download:download_models"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
coverage = "*"
pytest-randomly = "*"
#pytest-lazy-fixture = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
